重刷LeetCode HOT100：子串